Added some good stuff ;)

--- a/index.html
+++ b/index.html
@@ -15,25 +15,31 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <h1> Welcome Humans</h1>
+    </div>
 
+    <div class="content">
+        <h1><u>This is my first attempt at HTML!</u></h1>
+        <h2>Let me know if it looks good ;)</h2>
 
-    <h1>This is my first attempt at HTML!</h1>
-    <h2>Let me know if it looks good ;)</h2>
+        <p><span class="para">
+                My name is Julio Argueta, and this is my first attempt at making a website. I dont think I am a
+                very good
+                coder, but hey! I gotta make a living somehow lol.
+                So wish me luck on my adventures!</span></p>
 
-    <p><span class="para">
-            My name is Julio Argueta, and this is my first attempt at making a website. I dont think I am a very good
-            coder, but hey! i gotta make a living somehow lol.
-            so wish me luck on my adventures!</span></p>
+        <p><b>This is a bold text.</b>
+            <i>Italic text</i>
+            <u>Underlined text</u>
+            <sub>Subscript text</sub>
+            <sup>Superscript text</sup></p>
 
-    <p><b>This is a bold text.</b>
-        <i>Italic text</i>
-        <u>Underlined text</u>
-        <sub>Subscript text</sub>
-        <sup>Superscript text</sup></p>
+        <img class="yoshi-egg" src="https://media.giphy.com/media/Ybn6JMiTnjm4U/giphy.gif"></img>
+        <img class="yoshi" src="https://i.gifer.com/ZaiM.gif"></img>
 
-    <img class="yoshi-egg" src="https://media.giphy.com/media/Ybn6JMiTnjm4U/giphy.gif"></img>
-
-    <a href="www.youtube.com"> This is a link to youtube</a>
+        <a href="www.youtube.com"> This is a link to youtube</a>
+    </div>
 </body>
 
 </html>
