--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       
           
-    <div class="container has-text-centered has-background-info">
+    <div class="container has-text-centered has-background-info is-fullhd">
         <h1 ><u>This is my first attempt at HTML!</u></h1>
         <h2>Let me know if it looks good ;)</h2>
 
@@ -60,13 +60,7 @@
         <a href="htmlComponents/navBar.html"> This is a link to navbar</a>
     </div>
    
-    <footer class="footer has-background-link">
-            <div class="content has-text-centered has-text-white">
-              <p>
-                This website was made by <strong>Julio Argueta</strong> 
-              </p>
-            </div>
-          </footer>
+    <div id="footer"></div>
 </body>
 
 </html>
