added a fancy title

--- a/index.html
+++ b/index.html
@@ -3,64 +3,78 @@
 <!--Language-->
 
 <head>
-    <meta charset="utf-8">
-    <!--Telling the browser what encoding to use-->
+  <meta charset="utf-8">
+  <!--Telling the browser what encoding to use-->
 
-    <!--This is what makes it responsive-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/index.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <script src="JS/compLoader.js"></script>
-   
+  <!--This is what makes it responsive-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=0, maximum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="CSS/index.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
+  <script src="JS/compLoader.js"></script>
 
-    <title>Julio's First Website</title>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>
+
+
+
+
+
+  <title>Julio's First Website</title>
 </head>
 
 <body>
-    <!--Nav Bar-->
-    <div id="navBar"></div>
-   
-    <!--Content-->
-      <section class="hero is-info">
-        <div class="hero-body">
-          <div class="container has-text-centered">
-            <h1 class="title">
-              Home
-            </h1>
-            <h2 class="subtitle">
-              About me
-            </h2>
+  <!--Nav Bar-->
+  <div id="navBar"></div>
+
+  <!--Content-->
+
+  <section class="hero is-info is-medium">
+    <div class="hero-body is-medium">
+      <div class="container">
+        <h1 class="title">
+          <div class="tile is-vertical is-8 is-dark">
+            <section class="fancy">
+              <h1>
+                <span class="fancyTitle">This is</span>
+                <span class="fancyTitle">a long</span>
+                <span class="fancyTitle">long title</span>
+              </h1>
+            </section>
           </div>
-        </div>
-      </section>
-
-      
           
-    <div class="container has-text-centered has-background-info is-fullhd">
-        <h1 ><u>This is my first attempt at HTML!</u></h1>
-        <h2>Let me know if it looks good ;)</h2>
+  </section>
 
-        <p><span class="para">
-                My name is Julio Argueta, <i class="em em-wave"></i> and this is my first attempt at making a website.
 
-                So wish me luck on my adventures!</span></p>
 
-        <p><b>This is a bold text.</b>
-            <i>Italic text</i>
-            <u>Underlined text</u>
-            <sub>Subscript text</sub>
-            <sup>Superscript text</sup></p>
 
-        <img class="yoshi-egg" src="https://media.giphy.com/media/Ybn6JMiTnjm4U/giphy.gif"></img>
-        <img class="yoshi" src="https://i.gifer.com/ZaiM.gif"></img>
 
-        <a href="htmlComponents/navBar.html"> This is a link to navbar</a>
-    </div>
-   
-    <div id="footer"></div>
+  <div class="container has-text-centered has-background-info is-fullhd">
+    <h1><u>This is my first attempt at HTML!</u></h1>
+    <h2>Let me know if it looks good ;)</h2>
+
+    <p><span class="para">
+        My name is Julio Argueta, <i class="em em-wave"></i> and this is my first attempt at making a website.
+
+        So wish me luck on my adventures!</span></p>
+
+    <p><b>This is a bold text.</b>
+      <i>Italic text</i>
+      <u>Underlined text</u>
+      <sub>Subscript text</sub>
+      <sup>Superscript text</sup></p>
+
+    <img class="yoshi-egg" src="https://media.giphy.com/media/Ybn6JMiTnjm4U/giphy.gif"></img>
+    <img class="yoshi" src="https://i.gifer.com/ZaiM.gif"></img>
+
+    <a href="htmlComponents/navBar.html"> This is a link to navbar</a>
+  </div>
+
+  <div id="footer"></div>
 </body>
 
 </html>
