--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <footer class="footer has-background-link">
+    <footer class="footer has-background-dark">
         <div class="content has-text-centered has-text-white">
             <p>
-                This website was made by <strong>Julio Argueta</strong>
+                This website was made by <strong class="has-text-white">Julio Argueta</strong>
             </p>
         </div>
     </footer>
