--- a/htmlComponents/navBar.html
+++ b/htmlComponents/navBar.html
@@ -10,7 +10,7 @@
 <body>
 
   </div>
-  <nav class="navbar is-link" role="navigation" aria-label="main navigation">
+  <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
         <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
