--- a/htmlComponents/navBar.html
+++ b/htmlComponents/navBar.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
 <!--Language-->
+<html lang="en">
+
 
 <head>
   <meta charset="utf-8">
- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="JS/navBar.js"></script>
 </head>
 
 <body>
