--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="JS/compLoader.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script> 
-  <script src="js/index.js"></script>
+  <script src="JS/index.js"></script>
  
  
 
