Removed always loop title and made it loop when you hover over it.

--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
   <div id="navBar"></div>
 
 <!--Content-->
-<section class="hero is-fullheight is-info">
+<section class="hero is-medium is-info">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
         <section class="fancy">
           <h1 id="fancyText">
-            <span class="fancyTitle">Welcome</span>
-            <span class="fancyTitle">to my</span>
-            <span class="fancyTitle">Webiste</span>
+            <span class="fancyTitle">Julio</span>
+            <span class="fancyTitle">Argueta</span>
           </h1>
         </section>
       </h1>
