added a github button and added an emoji to the footer

--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <!--Language-->
 <html lang="en">
-
-
+        <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js "></script>
 <head>
     <meta charset="utf-8">
 
@@ -12,8 +11,16 @@
     <footer class="footer has-background-dark">
         <div class="content has-text-centered has-text-white">
             <p>
-                This website was made by <strong class="has-text-white">Julio Argueta</strong>
-            </p>
+                    <a class="button is-link">
+                            <span class="icon">
+                              <i class="fab fa-github"></i>
+                            </span>
+                            <span>GitHub</span>
+                          </a>
+                        </p>
+                <p>
+                        This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i class="em em-computer"> </i>
+                </p> 
         </div>
     </footer>
 </body>
