--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="CSS/index.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!--JavaScript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="JS/compLoader.js"></script>
@@ -57,7 +58,7 @@
 <section class="hero is-parent is-info">
   <div class="hero-body">
     <div class="container has-text-centered">
-      <h1><u>This is my first attempt at HTML!</u></h1>
+      <h1 class="title is-3">This is my first attempt at HTML!</h1>
       <h2>Let me know if it looks good ;)</h2>
 
       <p><span class="para">
