fixed scaling issues with the title and added contact page

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
     <!--Nav Bar-->
   <div id="navBar"></div>
   
-  <div class="container">
-        <div class="notification">
+  <div class="container ">
+        <div class="notification is-info">
           This container is <strong>centered</strong> on desktop.
         </div>
       </div>
