--- a/htmlComponents/navBar.html
+++ b/htmlComponents/navBar.html
@@ -31,7 +31,7 @@
           Projects
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" href="contact.html">
           Contact Me
         </a>
       </div>
