--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -1,28 +1,45 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <!--Language-->
 <html lang="en">
-        <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js "></script>
+
+<!--Scripts-->
+<script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js "></script>
+
 <head>
-    <meta charset="utf-8">
+        <meta charset="utf-8">
 
 </head>
 
+
+
 <body>
-    <footer class="footer has-background-dark">
-        <div class="content has-text-centered has-text-white">
-            <p>
-                    <a class="button is-link">
-                            <span class="icon">
-                              <i class="fab fa-github"></i>
-                            </span>
-                            <span>GitHub</span>
-                          </a>
+        <footer class="footer has-background-dark">
+                <div class="content has-text-centered has-text-white">
+                        <p>
+                               <a class="button is-link" href="https://github.com/Julioargueta21">
+                                        <span class="icon">
+                                                <i class="fab fa-github">
+                                                </i>
+                                        </span>
+                                   <span>GitHub </span>
+                                </a>
+                               
                         </p>
-                <p>
-                        This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i class="em em-computer"> </i>
-                </p> 
-        </div>
-    </footer>
+
+                        <p>
+                                This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i
+                                        class="em em-computer"> </i>
+                        </p>
+
+                        <div class="made-by-bulma"></div>
+                          <a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--white.png" alt="Made with Bulma" width="163" height="31">
+                        </a>
+
+                </div>
+        </footer>
 </body>
+
+
+
 
 </html>
