removed the contact me page and added a projects page

--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -16,23 +16,28 @@
         <footer class="footer has-background-dark">
                 <div class="content has-text-centered has-text-white">
                         <p>
-                               <a class="button is-link" href="https://github.com/Julioargueta21">
-                                        <span class="icon">
-                                                <i class="fab fa-github">
-                                                </i>
+                                <a class="button href=" https://github.com/Julioargueta21"> <span class="icon">
+                                        <i class="fab fa-github"> </i>
                                         </span>
-                                   <span>GitHub </span>
+                                        <span>GitHub </span>
                                 </a>
-                               
-                        </p>
 
+                                <a class="button is-link has-text-white" href="mailto:julio@jargueta.com">
+                                        <span class="icon">
+                                                <i class="fas fa-user-circle"></i>
+                                        </span>
+                                        <span>Contact Me</span>
+                                </a>
+
+                        </p>
                         <p>
                                 This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i
                                         class="em em-computer"> </i>
                         </p>
 
                         <div class="made-by-bulma"></div>
-                          <a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--white.png" alt="Made with Bulma" width="163" height="31">
+                        <a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--white.png" alt="Made with Bulma"
+                                        width="163" height="31">
                         </a>
 
                 </div>
