--- a/htmlComponents/navBar.html
+++ b/htmlComponents/navBar.html
@@ -27,12 +27,12 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
+        <a class="navbar-item" href="projects.html">
           Projects
         </a>
 
-        <a class="navbar-item" href="contact.html">
-          Contact Me
+        <a class="navbar-item">
+          About
         </a>
       </div>
     </div>
