added a new bouncing text to projects

--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -16,19 +16,19 @@
         <footer class="footer has-background-dark">
                 <div class="content has-text-centered has-text-white">
                         <p>
-                                <a class="button href=" https://github.com/Julioargueta21"> <span class="icon">
-                                        <i class="fab fa-github"> </i>
+                                <a class="button" href="https://github.com/Julioargueta21"> 
+                                        <span class="icon">
+                                                <i class="fab fa-github"> </i>  
                                         </span>
-                                        <span>GitHub </span>
+                                    <span>GitHub</span>
                                 </a>
 
                                 <a class="button is-link has-text-white" href="mailto:julio@jargueta.com">
                                         <span class="icon">
                                                 <i class="fas fa-user-circle"></i>
-                                        </span>
+                                               </span>
                                         <span>Contact Me</span>
                                 </a>
-
                         </p>
                         <p>
                                 This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i
@@ -39,7 +39,6 @@
                         <a href="https://bulma.io"><img src="https://bulma.io/images/made-with-bulma--white.png" alt="Made with Bulma"
                                         width="163" height="31">
                         </a>
-
                 </div>
         </footer>
 </body>
