--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   
   <!--StyleSheets-->
   <link rel="stylesheet" type="text/css" href="CSS/index.css">
+  <link rel="stylesheet" type="text/css" href="CSS/global.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -73,14 +74,12 @@
 
         <div class="tile is-parent ">
           <article class="tile is-child notification is-dark ">
-            <p class="title">This is my first attempt at HTML!</p>
-            <p class="subtitle">
-              </h2>Let me know how it looks</h2>
-
+            <p class="title">Welcome To My Website!</p>
               <p><span class="para">
-                  My name is Julio Argueta, <i class="em em-wave"></i> and this is my first attempt at making a
-                  website.
-                  So wish me luck on my adventures!</span>
+                  <br> My name is <b>Julio Argueta</b>, <i class="em em-wave"></i> 
+                  i'm a software engineering major attending SUNY Oswego. This is my first attempt
+                  at making a website. So wish me luck on my adventures!
+              </span>
               </p>
 
               <p><b>This is a bold text.</b>
