--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
   <!--StyleSheets-->
   <link rel="stylesheet" type="text/css" href="CSS/projects.css">
   <link rel="stylesheet" type="text/css" href="CSS/global.css">
-  <link rel="stylesheet" href="css/bounceStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/bounceStyle.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
