placed title of projects on the top and added a body

--- a/projects.html
+++ b/projects.html
@@ -23,48 +23,96 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="JS/compLoader.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script> 
-  
-
-
-
-
-
-
-
-  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>   
  
 <title>Contact Us</title>
 </head>
-
 <body>
   <!--Nav Bar-->
   <div id="navBar"></div>
+  <!--Content-->
 
-  <section class="hero is-large is-info is-bold">
-    <div class="hero-body">
-      <div class="container">
-          <body>
+  <div class="columns">
+    <div class="column">
+      <!--This is the hero background-->
+      <section class="hero is-info is-bold">
+        <div class="hero-body">
+          <div class="container">
+            <!--This is the projects title-->
+
+            <body>
               <h1 class="bounceH1 span">
-                <span >J</span>
-                <span >u</span>
-                <span >m</span>
-                <span >p</span>
-                <span >!</span>
+                <span>P</span>
+                <span>r</span>
+                <span>o</span>
+                <span>j</span>
+                <span>e</span>
+                <span>c</span>
+                <span>t</span>
+                <span>s</span>
+                <span>!</span>
               </h1>
             </body>
+          </div>
+        </div>
 
-            
-        <section class="hero is-dark is-bold">
+        <!--This is the hero background-->
+        <section class="hero ">
           <div class="hero-body">
             <div class="container">
-                
+
+                              <!--This is the background for the body-->
+                              <section class="hero is-dark is-ancestor">
+                                <div class="hero-body">
+                                  <div class="container">
+                                    <p class=" has-text-white">
+                                        <h1 class="is-size-5 has-text-centered" >
+                                            These are a few projects i'm currently working on/finished.
+                                        </h1>
+                                    </p>
+
+
+                                    <section class="hero is-child has-text-centered is-warning">
+                                        <div class="hero-body">
+                                          <div class="container">
+                                            <h1 class="title">
+                                                <p class="title">Reciept Saver</p>
+                                                <p class="subtitle">This is an android app that allowed the user to save their reciepts totals locally 
+                                                  on their phone and or use <br> dropbox to save the photo online. </p>
+                                                  <img src="Assets/recieptSaver.jpg">
+                                          </div>
+                                        </div>
+                                      </section>
+
+                                                  <section class="hero is-success is-child">
+                                                      <div class="hero-body">
+                                                        <div class="container">
+                                                          <h1 class="title">
+                                                            Primary title
+                                                          </h1>
+                                                          <h2 class="subtitle">
+                                                            Primary subtitle
+                                                          </h2>
+                                                        </div>
+                                                      </div>
+                                                    </section>
+
+                                  </div>
+                                </div>
+                              </section>
+
             </div>
           </div>
         </section>
-      </div>
-    </div>
+
   </section>
+  </div>
+  </div>
+  </div>
+</div>
+</div>
+
+
 
   <!--Footer Insertion Code-->
   <div id="footer"></div>
