Added the reciept saver project

--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,11 @@
 <head>
   <!--Telling the browser what text encoding to use-->
   <meta charset="utf-8">
-  
+
 
   <!--This is what makes it responsive-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=0, maximum-scale=1.0">
-  
+
   <!--StyleSheets-->
   <link rel="stylesheet" type="text/css" href="CSS/global.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -23,10 +23,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="JS/compLoader.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>   
- 
-<title>Contact Us</title>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>
+
+  <title>Contact Us</title>
 </head>
+
 <body>
   <!--Nav Bar-->
   <div id="navBar"></div>
@@ -56,64 +57,47 @@
           </div>
         </div>
 
-        <!--This is the hero background-->
-        <section class="hero ">
+
+
+
+        <section class="hero">
           <div class="hero-body">
             <div class="container">
 
-                              <!--This is the background for the body-->
-                              <section class="hero is-dark is-ancestor">
-                                <div class="hero-body">
-                                  <div class="container">
-                                    <p class=" has-text-white">
-                                        <h1 class="is-size-5 has-text-centered" >
-                                            These are a few projects i'm currently working on/finished.
-                                        </h1>
-                                    </p>
+
+              <section class="hero is-dark has-text-centered">
+                <div class="hero-body">
+
+                    <p class="title is-size-1">Reciept Saver</p>
+                    <h1></h1>
+                    <p class="subtitle has-text-primary is-size-4"><b> Finshed &nbsp;&nbsp;&nbsp;</b>
+                    </p>
+
+                    <p class="subtitle ">This is an android app that allows the user to save their reciepts
+                      locally on their phone and or use dropbox to save the photo online. More info can be found
+                       on the 
+                       <a href="https://github.com/Julioargueta21/RecieptSaver" 
+                       style="color: #96dfe9">github repo.</a>
+                       <h1></h1>
+                    </p>
+                    <h1></h1>
+                    <img class="recieptSaver" src="Assets/recieptSaver.jpg">
+                  
+
+                </div>
+              </section>
 
 
-                                    <section class="hero is-child has-text-centered is-warning">
-                                        <div class="hero-body">
-                                          <div class="container">
-                                            <h1 class="title">
-                                                <p class="title">Reciept Saver</p>
-                                                <p class="subtitle">This is an android app that allowed the user to save their reciepts totals locally 
-                                                  on their phone and or use <br> dropbox to save the photo online. </p>
-                                                  <img src="Assets/recieptSaver.jpg">
-                                          </div>
-                                        </div>
-                                      </section>
-
-                                                  <section class="hero is-success is-child">
-                                                      <div class="hero-body">
-                                                        <div class="container">
-                                                          <h1 class="title">
-                                                            Primary title
-                                                          </h1>
-                                                          <h2 class="subtitle">
-                                                            Primary subtitle
-                                                          </h2>
-                                                        </div>
-                                                      </div>
-                                                    </section>
-
-                                  </div>
-                                </div>
-                              </section>
 
             </div>
           </div>
         </section>
 
-  </section>
-  </div>
-  </div>
-  </div>
-</div>
-</div>
+
+      </section>
 
 
 
-  <!--Footer Insertion Code-->
-  <div id="footer"></div>
+      <!--Footer Insertion Code-->
+      <div id="footer"></div>
 </body>
