Added About page and some improvements

--- a/htmlComponents/footer.html
+++ b/htmlComponents/footer.html
@@ -17,23 +17,25 @@
         <footer class="footer has-background-dark">
                 <div class="content has-text-centered has-text-white">
                         <p>
-                                <a class="button" href="https://github.com/Julioargueta21"> 
+                                <a class="button" href="https://github.com/Julioargueta21">
                                         <span class="icon">
-                                                <i class="fab fa-github"> </i>  
+                                                <i class="fab fa-github"> </i>
                                         </span>
-                                    <span>GitHub</span>
+                                        <span>GitHub</span>
                                 </a>
 
                                 <a class="button is-link has-text-white" href="mailto:julio@jargueta.com">
                                         <span class="icon">
                                                 <i class="fas fa-user-circle"></i>
-                                               </span>
+                                        </span>
                                         <span>Contact Me</span>
                                 </a>
                         </p>
                         <p>
                                 This Website Was Made By <strong class="has-text-white">Julio Argueta </strong> <i
                                         class="em em-computer"> </i>
+                        </p>
+                        <p> © Copyright 2019
                         </p>
 
                         <div class="made-by-bulma"></div>
@@ -43,8 +45,6 @@
                 </div>
         </footer>
 </body>
-
-
 
 
 </html>
