--- a/htmlComponents/navBar.html
+++ b/htmlComponents/navBar.html
@@ -31,8 +31,8 @@
           Projects
         </a>
 
-        <a class="navbar-item">
-          About
+        <a class="navbar-item" href="about.html">
+          About Me
         </a>
       </div>
     </div>
