--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           </div>
         </section>
 
-        <div class="tile is-parent ">
-          <article class="tile is-child notification is-dark ">
+        <div class="tile is-parent">
+          <article class="tile is-child notification is-dark roundit">
             <p class="title">Welcome To My Website!</p>
             <p><span class="para">
                 <br> My name is <b>Julio Argueta</b>, <i class="em em-wave"></i>
@@ -85,37 +85,7 @@
 
 
 
-    <div class="tile is-ancestor">
-      <div class="tile is-vertical is-8">
-        <div class="tile">
-          <div class="tile is-parent is-vertical">
-            <div class="tile is-parent">
-            </div>
-          </div>
-
-          <div class="tile is-parent">
-            <article class="tile is-child notification is-dark">
-              <p class="has-text-white has-text-centered is-size-3">
-                Contact Me
-              </p>
-              <p class="has-text-white has-text-centered is-size-5">
-                <br>Julio Argueta
-              </p>
-
-              <p class="has-text-white has-text-centered is-size-5">
-                Full Time Student<br>
-                SUNY Oswego
-              </p>
-              <p class="has-text-link has-text-centered is-size-5">
-                <a href="mailto:julio@jargueta.com"> <br>Contact me though email!</a>
-              </p>
-
-              <div class="content">
-            </article>
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
     <section class="hero">
       <div class="hero-body">
