--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>
 
-  <title>Contact Us</title>
+  <title>Projects</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
             <div class="container">
 
 
-              <section class="hero is-dark has-text-centered">
+              <section class="hero is-dark has-text-centered roundit">
                 <div class="hero-body">
 
                     <p class="title is-size-1">Reciept Saver</p>
@@ -81,7 +81,7 @@
                        <h1></h1>
                     </p>
                     <h1></h1>
-                    <img class="recieptSaver" src="Assets/recieptSaver.jpg">
+                    <img class="recieptSaver roundit" src="Assets/recieptSaver.jpg">
                   
 
                 </div>
